--- a/index.html
+++ b/index.html
@@ -15,18 +15,45 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="head">
         <div>
-          <img src="images/MAKERS_BRAND_LOGO.png" alt="logo" />
+          <img class="logo" src="images/MAKERS_BRAND_LOGO.png" alt="logo" />
         </div>
         <div>
-          <ul>
-            <li><a href="/">Blog</a></li>
-            <li><a href="/">Work</a></li>
-            <li><a href="/">Contact</a></li>
+          <ul class="menu">
+            <li><a class="text_on_menu" href="/">Blog</a></li>
+            <li><a class="text_on_menu" href="/">Work</a></li>
+            <li><a class="text_on_menu" href="/">Contact</a></li>
           </ul>
         </div>
       </div>
     </header>
+    <main>
+      <div class="about_me">
+        <div>
+          <h1>Hi, I`m John!<br />Creative Technologist</h1>
+          <p class="text">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <div class="button">
+            <p class="button_text">
+              <a class="text_on_button" href="/">Check my Work</a>
+            </p>
+          </div>
+        </div>
+        <div class="my_foto">
+          <img class="foto" src="images/Ellipse 1.png" alt="foto" />
+        </div>
+      </div>
+      <div class="post_title">
+        <div class="recent_posts">
+          <h2>Recent Posts</h2>
+          <a href="/">View all</a>
+        </div>
+        <div class="posts"></div>
+      </div>
+    </main>
   </body>
 </html>
