--- a/index.html
+++ b/index.html
@@ -49,11 +49,65 @@
       </div>
       <div class="post_title">
         <div class="recent_posts">
-          <h2>Recent Posts</h2>
-          <a href="/">View all</a>
+          <h3>Recent Posts</h3>
+          <a class="view_posts" href="/">View all</a>
         </div>
-        <div class="posts"></div>
+        <div class="posts">
+          <div class="sub_posts">
+            <h2>Post Title</h2>
+            <p>12 Feb 21 | Design System</p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+          <div class="sub_posts">
+            <h2>Post Title</h2>
+            <p>12 Feb 21 | Design System</p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="featured_work">
+        <div class="recent_posts">
+          <h3>Featured Work</h3>
+          <a class="view_posts" href="/">View all</a>
+        </div>
+        <div class="design">
+          <div>
+            <img class="pictures" src="images/Image.png" alt="dashboard" />
+          </div>
+          <div>
+            <h2>Designing Dashboards</h2>
+            <p>2020 Dashboard</p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </div>
+        <div class="design">
+          <div>
+            <img class="pictures" src="images/Image (1).png" alt="portraits" />
+          </div>
+          <div>
+            <h2>Vibrant Portraits</h2>
+            <p>2018 Illustration</p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </div>
       </div>
     </main>
+    <futter></futter>
   </body>
 </html>
