--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
         </div>
       </div>
     </main>
-    <futter></futter>
+    <footer>
+      <div class="soc">
+        <img class="soc_media" src="images/Figma.png" alt="figma" />
+        <img class="soc_media" src="images/Twitter.png" alt="twitter" />
+        <img class="soc_media" src="images/Instagram.png" alt="insta" />
+      </div>
+      <div class="end">
+        <p class="end_text">© 2022 Your Name. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
